Fixed work images on mobile.

--- a/css/write-css/light-mode.css
+++ b/css/write-css/light-mode.css
@@ -542,7 +542,7 @@ footer a:visited {
     }
 
     .work-object.six:focus {
-        background: url('img/day-zero-image.png') no-repeat center/100%;
+        background: url('img/deer-skull.png') no-repeat center/100%;
     }
 
     .work-object.seven:focus {
@@ -592,7 +592,7 @@ footer a:visited {
     }
 
     .work-object.six {
-        background: url('img/day-zero-image.png') no-repeat center/100%;
+        background: url('img/deer-skull.png') no-repeat center/100%;
     }
 
     .work-object.seven {
